# raytracing

./: CMakeLists.txt  LICENSE
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: app.cpp  app.h  config.h  init.cpp  init.h  main.cpp  math.cpp  math.h  physics.cpp  physics.h  screen.cpp  screen.h
